edit product card layout on hop page for tablet and laptop screens

--- a/shop.html
+++ b/shop.html
@@ -209,6 +209,29 @@
               <a class="btn">Add to cart</a>
             </div>
           </div>
+          <!--Product card-->
+          <div class="card text-center">
+            <img
+              src="img\shop_page\jonathan_mast_raspberries.jpg"
+              class="card-img-top"
+              alt="Punnets of raspberries"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Raspberries</h5>
+              <p class="card-text">£3.00 per 200g</p>
+              <!--Quantity dropdown box-->
+              <label for="quantity">Quantity:</label>
+              <select name="quantity" class="quantity">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
+              <!--Box ends-->
+              <a class="btn">Add to cart</a>
+            </div>
+          </div>
         </div>
       </section>
       <!--End of product category-->
@@ -331,6 +354,29 @@
               <a class="btn">Add to cart</a>
             </div>
           </div>
+          <!--Product card-->
+          <div class="card text-center">
+            <img
+              src="img\shop_page\lars_blankers_potatoes.jpg"
+              class="card-img-top"
+              alt="Potatoes"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Potatoes</h5>
+              <p class="card-text">75p per 1kg</p>
+              <!--Quantity dropdown box-->
+              <label for="quantity">Quantity:</label>
+              <select name="quantity" class="quantity">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
+              <!--Box ends-->
+              <a class="btn">Add to cart</a>
+            </div>
+          </div>
         </div>
       </section>
       <!--End of product category-->
@@ -440,6 +486,29 @@
             <div class="card-body">
               <h5 class="card-title">Sourdough Loaf</h5>
               <p class="card-text">£2.00 each</p>
+              <!--Quantity dropdown box-->
+              <label for="quantity">Quantity:</label>
+              <select name="quantity" class="quantity">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
+              <!--Box ends-->
+              <a class="btn">Add to cart</a>
+            </div>
+          </div>
+          <!--Product card-->
+          <div class="card text-center">
+            <img
+              src="img\shop_page\vicky_ng_brioche.jpg"
+              class="card-img-top"
+              alt="Brioche loaf"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Brioche Loaf</h5>
+              <p class="card-text">£2.50 each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -576,6 +645,29 @@
               <a class="btn">Add to cart</a>
             </div>
           </div>
+          <!--Product card-->
+          <div class="card text-center">
+            <img
+              src="img\shop_page\ben_lei_cookies.jpg"
+              class="card-img-top"
+              alt="A stack of chocolate chip cookies"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Cookies</h5>
+              <p class="card-text">75p each</p>
+              <!--Quantity dropdown box-->
+              <label for="quantity">Quantity:</label>
+              <select name="quantity" class="quantity">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
+              <!--Box ends-->
+              <a class="btn">Add to cart</a>
+            </div>
+          </div>
         </div>
       </section>
       <!--End of product category-->
@@ -698,6 +790,29 @@
               <a class="btn">Add to cart</a>
             </div>
           </div>
+          <!--Product card-->
+          <div class="card text-center">
+            <img
+              src="img\shop_page\bozhin_karaivanov_fusili.jpg"
+              class="card-img-top"
+              alt="Fusilli"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Fusilli</h5>
+              <p class="card-text">75p per 500g</p>
+              <!--Quantity dropdown box-->
+              <label for="quantity">Quantity:</label>
+              <select name="quantity" class="quantity">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
+              <!--Box ends-->
+              <a class="btn">Add to cart</a>
+            </div>
+          </div>
         </div>
       </section>
       <!--End of product category-->
@@ -738,6 +853,29 @@
             <div class="card-body">
               <h5 class="card-title">Cheddar</h5>
               <p class="card-text">£2.15 for 250g</p>
+              <!--Quantity dropdown box-->
+              <label for="quantity">Quantity:</label>
+              <select name="quantity" class="quantity">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
+              <!--Box ends-->
+              <a class="btn">Add to cart</a>
+            </div>
+          </div>
+          <!--Product card-->
+          <div class="card text-center">
+            <img
+              src="img\shop_page\aleksey_melkomukov_gouda.jpg"
+              class="card-img-top"
+              alt="Half a wheel of cheese next to some cheese slices"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Gouda</h5>
+              <p class="card-text">£3.50 per 250g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
@@ -826,7 +964,6 @@
       <!--End of code written in collaboration with Iuliia Ustkachkintseva-->
     </div>
     <!--End of products-->
-
     <!--Social media links:-->
     <footer class="additional_footer">
       <div class="social_media">
