--- a/shop.html
+++ b/shop.html
@@ -30,7 +30,7 @@
   <body>
     <header>
       <!--Bootstrap navbar:-->
-      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
+      <nav class="navbar fixed-top navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="./index.html"
           ><img
             class="company_logo"
